--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,9 @@
 .container {
   height: 100vh;
   width: 100vw;
+  padding-top: 3em;
+  padding-bottom: 3em;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
