--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,61 +1,117 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@600;700;800&display=swap");
 
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Manrope', sans-serif;
+  box-sizing: border-box;
+  font-family: "Manrope", sans-serif;
 }
 
-* {
-  box-sizing: border-box;
+h1 {
+  padding: 0;
+  margin: 0;
+}
+
+p {
+  margin: 0;
+}
+
+.container {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: linear-gradient(180deg, #ffffff 50%, #dfd7ff 100%);
+}
+
+.textLogo {
+  margin-top: 2em;
+}
+
+.imageLogo {
+  align-self: flex-end;
+  margin-right: 3em;
+}
+
+.title {
+  font-size: 6vw;
+
+  /* FIGMA */
+  font-style: normal;
+  font-weight: 800;
+  /* font-size: 80px; */
+  text-align: center;
+  letter-spacing: -0.06em;
+
+  background: linear-gradient(89.78deg, #704ee2 0.15%, #926ff7 99.81%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+}
+
+.subtitle {
+  font-size: 1.8vw;
+
+  /* FIGMA */
+  font-style: normal;
+  font-weight: 700;
+  /* font-size: 24px; */
+  /* line-height: 32px; */
+  text-align: center;
+  letter-spacing: -0.04em;
+  color: #454267;
+  /* flex: none;
+  order: 1;
+  flex-grow: 0; */
+}
+
+.integrations {
+  width: 100%;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 7vw;
+}
+
+.iphoneContainer {
+  max-height: 30vh;
+}
+
+.scrollIconContainer {
+  position: absolute;
+  bottom: 1em;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+}
+
+.qrContainer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  margin-right: 5%;
+  margin-bottom: 1em;
+  display: flex;
+  align-items: flex-end;
+}
+
+.qrText {
+  font-weight: 600;
+  margin-bottom: 0.1em;
+  margin-right: -0.5em;
+
+  /* FIGMA */
+  font-size: 16px;
+  line-height: 22px;
+  letter-spacing: -0.02em;
+  color: #454267;
+}
+
+.diagonalArrow {
+  margin-bottom: 2.3em;
+  margin-right: 0.5em;
 }
