--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,13 +16,16 @@ p {
   margin: 0;
 }
 
-.container {
+.page {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.welcome {
   background: linear-gradient(180deg, #ffffff 50%, #dfd7ff 100%);
 }
 
@@ -49,7 +52,6 @@ p {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
-  text-fill-color: transparent;
 }
 
 .subtitle {
@@ -97,6 +99,7 @@ p {
   margin-bottom: 1em;
   display: flex;
   align-items: flex-end;
+  z-index: 1;
 }
 
 .qrText {
@@ -114,4 +117,13 @@ p {
 .diagonalArrow {
   margin-bottom: 2.3em;
   margin-right: 0.5em;
+}
+
+.bottomCurvature {
+  position: absolute;
+  bottom: 0;
+  height: 10vh;
+  width: 100vw;
+  background-color: #ffffff;
+  z-index: 0;
 }
