--- a/styles/globals.css
+++ b/styles/globals.css
@@ -138,13 +138,14 @@ p {
 .destination {
   background: #ffffff;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
+  gap: 5vw;
 }
 
 .destinationsContainer {
   position: relative;
   height: 80%;
-  width: 35vw;
+  width: 40vw;
   border-radius: 2em;
   background: linear-gradient(180deg, #f4f0ff 0%, #ffffff 100%);
 }
@@ -274,4 +275,54 @@ p {
   color: #ffffff;
   display: inline;
   font-size: 1.8vw;
+}
+
+/* COMMUNITY PAGE */
+
+.community {
+  flex-direction: row;
+  justify-content: center;
+  gap: 5vw;
+  background-color: #ffffff;
+}
+
+.communityHeroText {
+  width: 40vw;
+  display: flex;
+  flex-direction: column;
+}
+
+.communityBackground {
+  position: relative;
+  width: 28vw;
+  height: 28vw;
+  border-radius: 50%;
+  background: linear-gradient(273.81deg, #8564f7 32.09%, #9877f4 100%);
+}
+
+.communityContainer {
+  position: relative;
+  left: -40%;
+  top: -20%;
+  width: 45vw;
+  height: 45vw;
+}
+
+.joinText {
+  color: #454267;
+  font-size: 4vw;
+  margin-bottom: -0.5em;
+}
+
+.communityText {
+  font-size: 6vw;
+
+  font-family: "Manrope";
+  font-style: normal;
+  font-weight: 800;
+  letter-spacing: -0.06em;
+  background: linear-gradient(273.07deg, #e95aec 0%, #8793ff 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
 }
