--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@300;600;700;800&display=swap");
 
 body {
   padding: 0;
@@ -90,9 +90,9 @@ p {
 
 .scrollIconContainer {
   position: absolute;
-  bottom: 1em;
+  bottom: 0;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -20%);
   z-index: 2;
 }
 
@@ -104,7 +104,7 @@ p {
   margin-bottom: 1em;
   display: flex;
   align-items: flex-end;
-  z-index: 1;
+  z-index: 2;
 }
 
 .qrText {
@@ -120,17 +120,16 @@ p {
 }
 
 .diagonalArrow {
-  margin-bottom: 2.3em;
+  margin-bottom: 1.8em;
   margin-right: 0.5em;
 }
 
 .bottomCurvature {
   position: absolute;
   bottom: 0;
-  height: 10vh;
+  height: 15vh;
   width: 100vw;
-  background-color: #ffffff;
-  z-index: 0;
+  background: url("../public/bottom-curvature.svg");
 }
 
 /* DESTINATION PAGE */
@@ -140,6 +139,8 @@ p {
   flex-direction: row;
   justify-content: center;
   gap: 5vw;
+  position: relative;
+  overflow: visible;
 }
 
 .destinationsContainer {
@@ -148,6 +149,7 @@ p {
   width: 40vw;
   border-radius: 2em;
   background: linear-gradient(180deg, #f4f0ff 0%, #ffffff 100%);
+  z-index: 2;
 }
 
 .iconContainer {
@@ -183,6 +185,7 @@ p {
   width: 40vw;
   display: flex;
   flex-direction: column;
+  z-index: 2;
 }
 
 .findText {
@@ -285,16 +288,19 @@ p {
 /* COMMUNITY PAGE */
 
 .community {
+  position: relative;
   flex-direction: row;
   justify-content: center;
   gap: 20vw;
   background-color: #ffffff;
+  overflow: visible;
 }
 
 .communityHeroText {
   width: 40vw;
   display: flex;
   flex-direction: column;
+  z-index: 2;
 }
 
 .communityBackground {
@@ -304,6 +310,7 @@ p {
   border-radius: 50%;
   margin-right: 3em;
   background: linear-gradient(273.81deg, #8564f7 32.09%, #9877f4 100%);
+  z-index: 2;
 }
 
 .communityContainer {
@@ -331,4 +338,169 @@ p {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
+}
+
+.whiteBubble {
+  position: absolute;
+  z-index: 1;
+  background-color: #ffffff;
+  width: 250vw;
+  aspect-ratio: 4 / 1;
+  top: 50%;
+  left: 50%;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* DOWNLOAD PAGE */
+
+.download {
+  height: 75vh;
+  position: relative;
+  background: #ffffff;
+  overflow: visible;
+}
+
+.downloadGradient {
+  position: absolute;
+  top: 0;
+  height: 22vh;
+  width: 100vw;
+  z-index: 0;
+  background: linear-gradient(270deg, #ffffff 0%, rgba(255, 255, 255, 0) 50%),
+    linear-gradient(90deg, #ffffff -0.55%, rgba(255, 255, 255, 0) 50%),
+    linear-gradient(180deg, #a98cff 0%, rgba(255, 255, 255, 0) 100%);
+}
+
+.appIcon {
+  background: rgba(145, 107, 255, 0.25);
+  backdrop-filter: blur(8px);
+  border-radius: 28px;
+  width: 112px;
+  height: 112px;
+  z-index: 2;
+  margin-top: -1em;
+}
+
+.appIcon > div {
+  padding: 9px;
+}
+
+.downloadHeroText {
+  font-family: "Manrope";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 4.5vw;
+  text-align: center;
+  letter-spacing: -0.04em;
+  color: #454267;
+  z-index: 2;
+}
+
+.downloadDescription {
+  font-family: "Manrope";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 2vw;
+  text-align: center;
+  letter-spacing: -0.04em;
+  color: #454267;
+}
+
+.downloadStoreContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5vw;
+  margin-top: 2em;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  width: 90vw;
+
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 18px;
+  letter-spacing: -0.02em;
+  color: #454267;
+}
+
+.contacts {
+  display: flex;
+  width: 100%;
+  height: 50px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.emailContainer {
+  display: flex;
+  gap: 0.3em;
+}
+
+.socialContainer {
+  display: flex;
+  gap: 1.5em;
+}
+
+.bottomFooter {
+  display: flex;
+  align-items: center;
+  height: 50px;
+  width: 100%;
+  justify-content: space-between;
+
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 18px;
+  letter-spacing: -0.02em;
+  color: #45426770;
+}
+
+.footerBorder {
+  height: 1px;
+  background: linear-gradient(
+    90deg,
+    #e0dde8 0%,
+    rgba(210, 197, 255, 0) 50%,
+    #e0dde8 100%
+  );
+}
+
+.copyrightContainer {
+  display: flex;
+  align-items: center;
+  gap: 0.3em;
+  color: #45426770;
+}
+
+.links {
+  display: flex;
+  gap: 1.5em;
+}
+
+.links > a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.footerQRContainer {
+  position: absolute;
+  left: 50%;
+  bottom: 12px;
+  transform: translate(-50%, 0);
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 19px;
+  text-align: center;
+  letter-spacing: -0.02em;
+  color: #454267;
 }
