--- a/styles/globals.css
+++ b/styles/globals.css
@@ -127,9 +127,12 @@ p {
 .bottomCurvature {
   position: absolute;
   bottom: 0;
-  height: 15vh;
+  height: 14vh;
   width: 100vw;
   background: url("../public/bottom-curvature.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 /* DESTINATION PAGE */
@@ -266,7 +269,7 @@ p {
   font-weight: 600;
   text-align: center;
   letter-spacing: -0.04em;
-  width: 56vw;
+  width: 60vw;
 }
 
 .highlightLight {
@@ -344,8 +347,8 @@ p {
   position: absolute;
   z-index: 1;
   background-color: #ffffff;
-  width: 250vw;
-  aspect-ratio: 4 / 1;
+  width: 320vw;
+  aspect-ratio: 5 / 1;
   top: 50%;
   left: 50%;
   border-radius: 50%;
