--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,25 +29,42 @@ p {
 
 /* WELCOME PAGE */
 .welcome {
+  background-color: #ffffff;
+}
+
+.purpleBubble {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 94%;
   background: linear-gradient(180deg, #ffffff 50%, #dfd7ff 100%);
+  border-radius: 0 0 50% 50%;
+  transform: scaleX(2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 
 .textLogo {
   margin-top: 2em;
+  z-index: 2;
 }
 
 .imageLogo {
   align-self: flex-end;
   margin-right: 3em;
+  z-index: 2;
 }
 
 .title {
   font-size: 6vw;
+  z-index: 2;
 
   /* FIGMA */
   font-style: normal;
   font-weight: 800;
-  /* font-size: 80px; */
   text-align: center;
   letter-spacing: -0.06em;
 
@@ -59,43 +76,56 @@ p {
 
 .subtitle {
   font-size: 1.8vw;
+  z-index: 2;
 
   /* FIGMA */
   font-style: normal;
   font-weight: 700;
-  /* font-size: 24px; */
-  /* line-height: 32px; */
   text-align: center;
   letter-spacing: -0.04em;
   color: #454267;
-  /* flex: none;
-  order: 1;
-  flex-grow: 0; */
 }
 
 .integrations {
   width: 100%;
-  height: 60vh;
   display: flex;
   justify-content: center;
-  align-items: center;
-  gap: 8vw;
+  align-items: flex-end;
+  gap: 50vw;
+  bottom: 20vh;
+  transform: scaleX(0.5);
+  position: absolute;
 }
 
 .iphoneContainer {
-  max-height: 30vh;
+  position: absolute;
+  bottom: -15px;
+  backface-visibility: hidden;
+  transform: scaleX(0.5);
+  scale: 1.3;
+  width: 30vw;
+  display: flex;
+  justify-content: center;
 }
 
 .storeImage {
-  padding: 0 2em;
-  padding-top: 9em;
+  z-index: 2;
+  scale: 1.1;
+}
+
+.left {
+  padding-left: 2em;
+}
+
+.right {
+  padding-right: 2em;
 }
 
 .scrollIconContainer {
   position: absolute;
   bottom: 0;
   left: 50%;
-  transform: translate(-50%, -20%);
+  transform: translate(-50%, -30%);
   z-index: 2;
 }
 
