fix: unified style

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -81,7 +81,7 @@ p {
 
 .imageLogo {
   align-self: flex-end;
-  margin-right: 3em;
+  margin-right: 8vw;
   z-index: 2;
 }
 
@@ -250,6 +250,8 @@ p {
 }
 
 .findText {
+  font-weight: 800;
+  letter-spacing: -0.04em;
   color: #454267;
   font-size: 4vw;
   margin-bottom: -0.5em;
@@ -276,12 +278,16 @@ p {
   padding: 1px 5px 2px;
   margin-right: 0.2em;
   font-size: 1.8vw;
+  letter-spacing: -0.04em;
+  font-weight: 600;
 }
 
 .explainText {
   color: #454267;
   display: inline;
   font-size: 1.8vw;
+  letter-spacing: -0.04em;
+  font-weight: 600;
 }
 
 /* GUIDES PAGE */
@@ -338,12 +344,15 @@ p {
   padding: 1px 5px 2px;
   margin-right: 0.2em;
   font-size: 1.8vw;
+  font-weight: 600;
 }
 
 .explainTextWhite {
   color: #ffffff;
   display: inline;
   font-size: 1.8vw;
+  letter-spacing: -0.04em;
+  font-weight: 600;
 }
 
 /* COMMUNITY PAGE */
@@ -384,6 +393,9 @@ p {
   color: #454267;
   font-size: 4vw;
   margin-bottom: -0.5em;
+  font-weight: 800;
+  letter-spacing: -0.04em;
+  font-size: 4vw;
 }
 
 .communityText {
@@ -471,8 +483,8 @@ p {
   flex-direction: column;
   width: 90vw;
 
-  font-weight: 500;
-  font-size: 13px;
+  font-weight: 600;
+  font-size: 14px;
   line-height: 18px;
   letter-spacing: -0.02em;
   color: #454267;
@@ -546,10 +558,14 @@ p {
   flex-direction: column;
   gap: 0.5em;
 
-  font-weight: 500;
+  font-weight: 600;
   font-size: 14px;
   line-height: 19px;
   text-align: center;
   letter-spacing: -0.02em;
   color: #454267;
+}
+
+.copyrightLogo {
+  filter: brightness(2.5) grayscale(1);
 }
