--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,7 +66,7 @@ p {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 3;
   width: 100%;
   height: 110%;
   background: #ffffff;
@@ -368,7 +368,7 @@ p {
   width: 40vw;
   display: flex;
   flex-direction: column;
-  z-index: 2;
+  z-index: 4;
 }
 
 .communityBackground {
@@ -377,8 +377,9 @@ p {
   height: 28vw;
   border-radius: 50%;
   margin-right: 3em;
-  background: linear-gradient(273.81deg, #8564f7 32.09%, #9877f4 100%);
-  z-index: 2;
+  /* background: linear-gradient(273.81deg, #8564f7 32.09%, #9877f4 100%); */
+  background: #9877f4;
+  z-index: 4;
 }
 
 .communityContainer {
@@ -424,7 +425,7 @@ p {
   top: 0;
   height: 22vh;
   width: 100vw;
-  z-index: 0;
+  z-index: 2;
   background: linear-gradient(270deg, #ffffff 0%, rgba(255, 255, 255, 0) 50%),
     linear-gradient(90deg, #ffffff -0.55%, rgba(255, 255, 255, 0) 50%),
     linear-gradient(180deg, #a98cff 0%, rgba(255, 255, 255, 0) 100%);
@@ -436,7 +437,7 @@ p {
   border-radius: 28px;
   width: 112px;
   height: 112px;
-  z-index: 2;
+  z-index: 4;
   margin-top: 1.3em;
   margin-bottom: 1.3em;
 }
@@ -466,6 +467,7 @@ p {
   text-align: center;
   letter-spacing: -0.04em;
   color: #454267;
+  z-index: 2;
 }
 
 .downloadStoreContainer {
@@ -474,6 +476,7 @@ p {
   align-items: center;
   gap: 1.5vw;
   margin-top: 2em;
+  z-index: 2;
 }
 
 .footer {
@@ -557,6 +560,7 @@ p {
   display: flex;
   flex-direction: column;
   gap: 0.5em;
+  z-index: 2;
 
   font-weight: 600;
   font-size: 14px;
@@ -568,4 +572,26 @@ p {
 
 .copyrightLogo {
   filter: brightness(2.5) grayscale(1);
+}
+
+.curvedLine {
+  position: absolute;
+  bottom: 15%;
+  width: 100%;
+  aspect-ratio: 1;
+  background: linear-gradient(90deg, #ffffff 30%, #e7dfff 50%, #ffffff 70%);
+  border-radius: 0 0 50% 50%;
+  transform: scaleX(2);
+  z-index: 0;
+}
+
+.curvedOverlap {
+  position: absolute;
+  z-index: 1;
+  bottom: calc(15% + 3px);
+  width: 100%;
+  aspect-ratio: 1;
+  background: #ffffff;
+  border-radius: 0 0 50% 50%;
+  transform: scaleX(2);
 }
