--- a/styles/globals.css
+++ b/styles/globals.css
@@ -714,7 +714,7 @@ p {
   padding: 16px 24px;
   background: rgba(163, 94, 255, 0.05);
   border-radius: 20px;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 1em;
   line-height: 200%;
   letter-spacing: -0.02em;
@@ -752,6 +752,12 @@ p {
   letter-spacing: -0.02em;
   color: #aba6d6;
   padding-left: 3em;
+  margin-top: 1em;
+}
+
+.timelineContent__text > p:first-child {
+  font-weight: 700;
+  margin-bottom: 0.8em;
 }
 
 .statsContent {
