--- a/styles/globals.css
+++ b/styles/globals.css
@@ -325,7 +325,7 @@ p {
   font-weight: 600;
   text-align: center;
   letter-spacing: -0.04em;
-  width: 60vw;
+  width: 50vw;
 }
 
 .highlightLight {
@@ -737,22 +737,23 @@ p {
 .timelineContent {
   display: flex;
   justify-content: center;
-  padding: 3em;
+  width: 100%;
+  height: 100%;
 }
 
 .timelineContent__image {
-  width: 50%;
+  width: 70%;
+  padding: 2em 4em;
 }
 
 .timelineContent__text {
-  width: 100%;
+  padding: 3.6em 3em 0 0;
+
   font-weight: 600;
   font-size: 1em;
   line-height: 200%;
   letter-spacing: -0.02em;
   color: #aba6d6;
-  padding-left: 3em;
-  margin-top: 1em;
 }
 
 .timelineContent__text > p:first-child {
