--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,7 +42,7 @@ p {
   top: 0;
   left: 0;
   width: 100%;
-  height: 94%;
+  height: 91.2%;
   background: linear-gradient(180deg, #ffffff 50%, #dfd7ff 100%);
   border-radius: 0 0 50% 50%;
   transform: scaleX(2);
@@ -76,23 +76,27 @@ p {
 }
 
 .textLogo {
-  margin-top: 2em;
+  margin-top: 40px;
+  width: 96px;
   z-index: 2;
 }
 
 .imageLogo {
   align-self: flex-end;
-  margin-right: 8vw;
+  width: 64px;
   z-index: 2;
+  margin-right: 84px;
 }
 
 .title {
-  font-size: 6vw;
   z-index: 2;
 
-  /* FIGMA */
+  font-family: "Manrope";
   font-style: normal;
   font-weight: 800;
+  font-size: 80px;
+  line-height: 104px;
+
   text-align: center;
   letter-spacing: -0.06em;
 
@@ -103,15 +107,19 @@ p {
 }
 
 .subtitle {
-  font-size: 1.8vw;
+  margin-top: 10px;
   z-index: 2;
 
-  /* FIGMA */
+  font-family: "Manrope";
   font-style: normal;
   font-weight: 700;
+  font-size: 24px;
+  line-height: 36px;
   text-align: center;
-  letter-spacing: -0.04em;
   color: #454267;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
 }
 
 .integrations {
@@ -119,34 +127,25 @@ p {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  gap: 50vw;
-  bottom: 20vh;
+  gap: 552px;
+  bottom: 115px;
   transform: scaleX(0.5);
   position: absolute;
 }
 
 .iphoneContainer {
   position: absolute;
-  bottom: -15px;
+  top: 346px;
   backface-visibility: hidden;
   transform: scaleX(0.5);
-  scale: 1.3;
-  width: 30vw;
+  width: 320px;
   display: flex;
   justify-content: center;
 }
 
 .storeImage {
   z-index: 2;
-  scale: 1.1;
-}
-
-.left {
-  padding-left: 2em;
-}
-
-.right {
-  padding-right: 2em;
+  width: 175px;
 }
 
 .scrollIconContainer {
@@ -161,8 +160,8 @@ p {
   position: absolute;
   right: 0;
   bottom: 0;
-  margin-right: 1.5em;
-  margin-bottom: 1em;
+  margin-right: 32px;
+  margin-bottom: 24px;
   display: flex;
   align-items: flex-end;
   z-index: 2;
@@ -170,8 +169,7 @@ p {
 
 .qrText {
   font-weight: 600;
-  margin-bottom: 0.1em;
-  margin-right: -0.5em;
+  margin-right: -12px;
 
   /* FIGMA */
   font-size: 16px;
@@ -181,8 +179,13 @@ p {
 }
 
 .diagonalArrow {
-  margin-bottom: 1.8em;
-  margin-right: 0.5em;
+  margin-bottom: 28px;
+  margin-right: 7px;
+}
+
+.qrImage {
+  width: 96px;
+  height: 96px;
 }
 
 /* DESTINATION PAGE */
